--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-*{
+* {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
   color: #393c41;
@@ -6,6 +6,26 @@
   padding: 0;
 }
 
-body{
+body {
   width: 100%;
+  overflow-x: hidden;
+}
+
+@keyframes animateDown {
+
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+
+  40% {
+    transform: translateY(5px);
+  }
+
+  60% {
+    transform: translateY(3px);
+  }
 }
